Version 0.1.3
- Added Skins

Version 0.1.2
- New sprite when clicking the face
- Added sound when buying a thing
- Other small changes

Version 0.1.1
- Item Icons
- Link Embeds
- Links to source code and github repo

Version 0.1.0
- Initial Version