@@ -54,7 +54,6 @@
   <br>
   <div class="skin">
     <h1>Da Skin Shop</h1>
-    <!--<h3>look cool-r<br>for now this function needs to be called manually via <code>loadSkins()</code></h3>-->
     <h3>look cool-r</h3>
     <hr>
     <h1 id="sknload">Loading Skins</h1>
@@ -63,6 +62,7 @@
     <p id="ver">Version x.x.x</p>
     <p>Created by <a href="https://mcoded.xyz" target="_blank">mcoded.xyz</a><br><a href="about.html" target="popup" onclick="window.open('about.html','name','width=819,height=658')">About this site</a> - <a href="changelog.txt" target="popup" onclick="window.open('changelog.txt','name','width=819,height=658')">Changelogs</a> - <a href="https://github.com/RealMCoded/the-most-epic-clicker-game-ever" target="_blank">GitHub</a></p>
   </footer>
+  <!--Run da game's code-->
    <script src="script.js"></script>
   </body>
 </html>
